squashing bugs

--- a/src/components/Bubbles.css
+++ b/src/components/Bubbles.css
@@ -1,27 +1,9 @@
 @keyframes floatAnimation {
-    0%, 100% {
-      transform: translateY(0);
-    }
-    50% {
-      transform: translateY(-10px);
-    }
+  0%,
+  100% {
+    transform: translateY(0);
   }
-  
-  @keyframes rotateAnimation {
-    0%, 100% {
-      transform: rotate(0deg);
-    }
-    50% {
-      transform: rotate(180deg);
-    }
+  50% {
+    transform: translateY(-10px);
   }
-  
-  @keyframes scaleAnimation {
-    0%, 100% {
-      transform: scale(1);
-    }
-    50% {
-      transform: scale(1.2);
-    }
-  }
-  
+}
